--- a/HTMLCSS/connexion.html
+++ b/HTMLCSS/connexion.html
@@ -2,6 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>connexion</title>
+	<link rel= "stylesheet" type="text/css"href= "style.css"/>
 
 </head>
 <body>
