--- a/HTMLCSS/index.html
+++ b/HTMLCSS/index.html
@@ -2,11 +2,55 @@
 <head>
 	<meta charset="UTF-8">
 	<title>index</title>
+	<link rel= "stylesheet" type="text/css"href= "style.css"/>
 
 </head>
 <body>
+<div id="blockfond">
 
-<button type="submit"> connextion </button>
+	<div id="login">
+		<button type="submit"> connextion </button> <button type="submit"> insciption </button>
+	</div>
 
+
+	<div id="entete">
+
+		<div id="m1">
+			Accueil
+		</div>
+
+
+		<div id="m2">
+			Mes Aritcles
+		</div>
+
+
+		<div id="m3">
+			Mon Profil
+		</div>
+
+
+		<div id="m4">
+			Deconnexion
+		</div>
+
+	</div>
+
+
+	<div id="recherche">
+
+	<input type="text" placeholder="Recherche un Article ou un Profile">
+
+	<input type="submit"value="recherche" />
+	
+	</div>
+
+	<div id="ArticleALaUne">
+		
+	</div>
+
+
+
+</div>
 </body>
 </html>
