--- a/HTMLCSS/inscription.html
+++ b/HTMLCSS/inscription.html
@@ -2,6 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>inscription</title>
+	<link rel= "stylesheet" type="text/css"href= "style.css"/>
 
 </head>
 <body>
