modifications de la page d'acccueil et de la page d'inscription + ajout du code de connexion a la base de donnée

--- a/HTMLCSS/index.html
+++ b/HTMLCSS/index.html
@@ -5,8 +5,10 @@
 
 </head>
 <body>
+<center>
 
-<button type="submit"> connextion </button>
+<button type="submit"> connextion </button> <button type="submit"> inscription </button>
 
+</center>
 </body>
 </html>
