--- a/HTMLCSS/inscription.html
+++ b/HTMLCSS/inscription.html
@@ -5,22 +5,23 @@
 
 </head>
 <body>
+<center>
 
 <form action="/users/" methode="post">
 
-	<input type="text" placeholder="pseudo">
-
-	<input type="e-mail" placeholder="adress e-mail">
-
-	<input type="password" placeholder="mot de passe">
-
-	<input type="password" placeholder="comfirmer mot de passe">
-
+	Pseudo : <input type="text" placeholder="pseudo">
+	<p></p>
+	Email : <input type="e-mail" placeholder="adress e-mail">
+	<p></p>
+	Mot de passe : <input type="password" placeholder="mot de passe">
+	<p></p>
+	Confirmation mot de passe : <input type="password" placeholder="comfirmer mot de passe">
+	<p></p>
 	<button type="submit"> inscription </button>
 
 </form>
 
 
-
+</center>
 </body>
 </html>
